--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "boxicons": "2.1.4",
     "clipboard": "2.0.11",
     "dotenv": "16.3.1",
+    "framer-motion": "^11.0.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.45.4",
