--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
-# VITE_API_URL=http://3.94.116.17:8080/api/v1
-VITE_API_URL=http://localhost:8080/api/v1
+ VITE_API_URL=https:www.everchic.ec/api/v1
+#VITE_API_URL=http://localhost:8080/api/v1
+
+# Tiene q escuchar al puerto que lo emite en el backend 
+#ENDPOINT_SOCKET_WHATSAPP=http://3.94.116.17:3005
+VITE_API_URL_WHATSAPP=http://localhost:3005
+
+#import.meta.env.BASE_URL
